--- a/index.html
+++ b/index.html
@@ -9,40 +9,54 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/money.png" type="image/png">
 </head>
 
 <body>
     <header>
-        <h1 id="logo">Dev.Finance$</h1>
+        <img src="./img/logo.svg" alt="Logo Dev.Finance" id="logo">
     </header>
 
     <main class="container">
 
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
 
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./img/income.svg" alt="Imagem de entradas">
+                </h3>
                 <p>R$ 5000,00</p>
             </div>
             <div class="card">
-                <h3>Saídas</h3>
+                <h3>
+                    <span>Saídas</span>
+                    <img src="./img/expense.svg" alt="Imagem de saidas">
+                </h3>
                 <p>R$ 2000,00</p>
             </div>
             <div class="card total">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./img/total.svg" alt="Imagem de total">
+                </h3>
                 <p>R$ 3000,00</p>
             </div>
         </section>
 
         <section id="transaction">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
+
+            <a href="#" class="button new" onclick="Modal.open()">+ Nova transação</a>
+
             <table id="data-table">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -50,16 +64,25 @@
                         <td class="description">Luz</td>
                         <td class="expense">- R$ 500,00</td>
                         <td class="date">25/01/2021</td>
+                        <td>
+                            <img src="./img/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Criação de site</td>
                         <td class="income">R$ 300,00</td>
                         <td class="date">04/02/2021</td>
+                        <td>
+                            <img src="./img/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Internet</td>
                         <td class="expense">- R$ 70,00</td>
                         <td class="date">10/02/2021</td>
+                        <td>
+                            <img src="./img/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -67,10 +90,39 @@
         
     </main>
 
+    <div class="modal-overlay">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form action="">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="Descrição">
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
+                        <small class="help">Use sinal de - (negativo) para despesas e , (vírgula) para casas decimais</small>
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" id="date" name="date">
+                    </div>
+
+                    <div class="input-group actions">
+                        <a href="#" class="button cancel" onclick="Modal.close()">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>Dev.Finance$</p>
     </footer>
-
+    <script src="./main.js"></script>
 </body>
 
 </html>
