--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
                     <span>Entradas</span>
                     <img src="./img/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$ 5000,00</p>
+                <p id="incomeDisplay">R$ 5000,00</p>
             </div>
             <div class="card">
                 <h3>
                     <span>Saídas</span>
                     <img src="./img/expense.svg" alt="Imagem de saidas">
                 </h3>
-                <p>R$ 2000,00</p>
+                <p id="expenseDisplay">R$ 2000,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
                     <img src="./img/total.svg" alt="Imagem de total">
                 </h3>
-                <p>R$ 3000,00</p>
+                <p id="totalDisplay">R$ 3000,00</p>
             </div>
         </section>
 
@@ -60,30 +60,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">25/01/2021</td>
-                        <td>
-                            <img src="./img/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação de site</td>
-                        <td class="income">R$ 300,00</td>
-                        <td class="date">04/02/2021</td>
-                        <td>
-                            <img src="./img/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 70,00</td>
-                        <td class="date">10/02/2021</td>
-                        <td>
-                            <img src="./img/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
+
                 </tbody>
             </table>
         </section>
